overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,11 @@
   min-height: 100vh;
 }
 
+body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
 
 .content {
   flex: 1 0 auto;
